@@ -94,4 +94,4 @@ pico用の.htaccessに上書きして下さい。
 --------------
 
 2008年  2月 26日 作成
-2010年  3月  2日 更新
+2010年  3月 10日 更新
